# twin

./: .gitignore  CLAUDE.md  Cargo.toml  HOW_TO_USE.md  README.md  pyproject.toml  setup.bat  setup.sh
.github/workflows/: build.yml
tests/: conftest.py  test_agent_log.py  test_agent_runtime.py  test_agent_tools.py  test_cli.py  test_config_manager.py  test_context.py  test_embedder.py  test_llm.py  test_metadata.py  test_obsidian.py  test_parser.py  test_pdf.py  test_providers.py  test_rag_pipeline.py  test_retriever.py  test_streaming.py  test_url.py  test_usage.py  test_vector.py
twin/: __main__.py  cli.py  config.py  config_manager.py  usage.py
twin-core/: Cargo.toml
twin-core/src/: chunker.rs  lib.rs  token.rs
twin/agent/: __init__.py  log.py  runtime.py  tools.py
twin/ingestion/: embedder.py  obsidian.py  parser.py  pdf.py  url.py
twin/llm/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  openrouter.py
twin/query/: retriever.py
twin/rag/: __init__.py  context.py  pipeline.py  prompts.py
twin/storage/: metadata.py  vector.py
twin_core/: Cargo.toml
twin_core/src/: chunker.rs  lib.rs
twin_ui/: Cargo.toml
twin_ui/src/: app.rs  graph.rs  lib.rs  main.rs  memory.rs  subprocess.rs
twin_ui/src/panels/: agent.rs  chat.rs  kb_browser.rs  mod.rs  settings.rs
twin_ui/src/widgets/: dashboard.rs  mod.rs  source_chip.rs  streaming_text.rs
