[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twin"
version = "0.1.0"
description = "A local-first knowledge OS with agent execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.6",
    "sentence-transformers>=3.0",
    "sqlmodel>=0.0.16",
    "typer>=0.12",
    "rich>=13.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
twin = "twin.cli:app"