[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "twin"
version = "0.1.0"
description = "A local-first knowledge OS with agent execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.6",
    "sentence-transformers>=3.0",
    "sqlmodel>=0.0.16",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "einops>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "maturin>=1.13.3",
]

[project.scripts]
twin = "twin.cli:app"

[tool.maturin]
manifest-path = "twin_core/Cargo.toml"
python-source="."
module-name="twin"